--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap" rel="stylesheet">
 
     <script defer src="/build/bundle.js"></script>
   </head>
